# L_Physics

./: CMakeLists.txt  L_Physics.pro
include/: LPhys_Registration.h
include/Collision_Detection/: Binary_Space_Partitioner.h  Broad_Phase_Interface.h  Collision_Detector.h  Collision_Detector_2D.h  Default_Narrowest_CD.h  Dynamic_Narrow_CD.h  Intersection_Data.h  Narrow_Phase_Interface.h  Narrowest_Phase_Interface.h  SAT_Narrowest_CD.h  Space_Hasher_2D.h
include/Collision_Detection/Broad_Phase/: Binary_Space_Partitioner.h  Broad_Phase_Interface.h
include/Collision_Detection/Narrow_Phase/: Dynamic_Narrow_CD.h  Dynamic_Narrow_CD__Mobile_Vs_Static.h  Narrow_Phase_Interface.h  Narrow_Phase__Model_Vs_Point.h  Narrow_Phase__Model_Vs_Ray.h
include/Collision_Detection/Narrowest_Phase/: Narrowest_Phase_Interface.h  SAT_Narrowest_CD.h
include/Collision_Detection/Primitives/: Lines_Intersection.h  Polygon_VS_Ray_Intersection.h  Polygon_Vs_Point_Intersection.h  Primitives_Intersection_Detector.h  SAT_Models_Intersection.h  SAT_Models_Intersection_2D.h  SAT_Models_Intersection_3D.h  Segments_Intersection.h
include/Collision_Detection/Tools/: Bounding_Volume_Hierarchy.h
include/Collision_Resolution/: Collision_Resolution.h  Collision_Resolution_Interface.h  Collision_Resolution__Physics_Module_2D.h  Collision_Resolution__Physics_Module__Mesh.h  Collision_Resolution__Rigid_Body_2D.h  Collision_Resolver.h
include/Modules/: Dynamic_Physics_Module_2D.h  Physics_Module.h  Physics_Module_2D.h  Physics_Module_Base.h  Physics_Module__Mesh.h  Physics_Module__Point.h  Physics_Module__Ray.h  Physics_Module__Rigid_Body_2D.h  Rigid_Body.h  Rigid_Body_2D.h
include/Physical_Models/: Border.h  Physical_Model.h  Physical_Model_2D.h  Polygon.h  Rigid_Body_Physical_Model.h  Rigid_Body_Physical_Model_2D.h  Rigid_Body_Polygon.h
source/: LPhys_Registration.cpp
source/Collision_Detection/: Binary_Space_Partitioner.cpp  Broad_Phase_Interface.cpp  Collision_Detector.cpp  Collision_Detector_2D.cpp  Default_Narrowest_CD.cpp  Dynamic_Narrow_CD.cpp  Intersection_Data.cpp  Narrow_Phase_Interface.cpp  Narrowest_Phase_Interface.cpp  SAT_Narrowest_CD.cpp  Space_Hasher_2D.cpp
source/Collision_Detection/Broad_Phase/: Binary_Space_Partitioner.cpp  Broad_Phase_Interface.cpp
source/Collision_Detection/Narrow_Phase/: Dynamic_Narrow_CD.cpp  Dynamic_Narrow_CD__Mobile_Vs_Static.cpp  Narrow_Phase_Interface.cpp  Narrow_Phase__Model_Vs_Point.cpp  Narrow_Phase__Model_Vs_Ray.cpp
source/Collision_Detection/Narrowest_Phase/: Narrowest_Phase_Interface.cpp  SAT_Narrowest_CD.cpp
source/Collision_Detection/Primitives/: Lines_Intersection.cpp  Polygon_VS_Ray_Intersection.cpp  Polygon_Vs_Point_Intersection.cpp  SAT_Models_Intersection.cpp  SAT_Models_Intersection_2D.cpp  SAT_Models_Intersection_3D.cpp  Segments_Intersection.cpp
source/Collision_Detection/Tools/: Bounding_Volume_Hierarchy.cpp
source/Collision_Resolution/: Collision_Resolution__Physics_Module_2D.cpp  Collision_Resolution__Physics_Module__Mesh.cpp  Collision_Resolution__Rigid_Body_2D.cpp  Collision_Resolver.cpp
source/Modules/: Dynamic_Physics_Module_2D.cpp  Physics_Module.cpp  Physics_Module_2D.cpp  Physics_Module_Base.cpp  Physics_Module__Mesh.cpp  Physics_Module__Point.cpp  Physics_Module__Ray.cpp  Physics_Module__Rigid_Body_2D.cpp  Rigid_Body.cpp  Rigid_Body_2D.cpp
source/Physical_Models/: Border.cpp  Physical_Model.cpp  Physical_Model_2D.cpp  Polygon.cpp  Rigid_Body_Physical_Model.cpp  Rigid_Body_Physical_Model_2D.cpp  Rigid_Body_Polygon.cpp
tests/: CMakeLists.txt  Collision_Test_3D.cpp  Collision_Test_3D_Multiple_Objects.cpp  main.cpp  test_test.cpp
